fix: ci/cd 환경과 로컬 환경 테스트 설정 분리